Fixed: a.internal and a.external links now visible

--- a/less/themes/sphinx/ncoda.less
+++ b/less/themes/sphinx/ncoda.less
@@ -337,3 +337,10 @@ h5 { font-size: 1.25em; }
 h6 { font-size: 1em; }
 
 @base-heading-margin-top: 2rem;
+
+
+// =============================================================================
+// Links
+// =============================================================================
+a.internal { text-decoration: underline solid @link-hover-color; }
+a.external { text-decoration: underline solid; }
