--- a/less/themes/sphinx/sphinx.less
+++ b/less/themes/sphinx/sphinx.less
@@ -178,10 +178,11 @@ dd {  // the description block
         list-style: none;
     }
 
-    a {
+    a.internal {
         color: @topbar-link-color;
-        padding: 10px 20px;
         display: inline-block;
+        padding: 10px 20px;
+        text-decoration: none;
         &.am-active {
             color: @topbar-link-active-color;
         }
